Periodic signal quality checks are unfriendly to batteries
I've noticed that ModemManager checks the signal quality every 30 seconds:
ModemManager[20862]: <debug> [modem0] periodic signal quality and access technology checks scheduled
On a device powered from battery, communicating with the modem every 30 seconds just to get such information is far from ideal, since every traffic to and from the modem wakes up the whole chain of USB devices from host to the device, wasting power.
From a quick glance at the code it doesn't seem like it's a fallback - is there a specific reason for using periodic polling instead of unsolicited messages coming from the modem? It would be great to avoid unnecessary wake-ups when the device just sits idle and its situation doesn't change whatsoever.